@@ -4,6 +4,8 @@ require_once("model.php");
 /** specific model class for the admin page */
 class AdminModel extends Model 
 {
+	private array $secondarySubjects = [];
+
 	/** 
 	 * Executes the logic required for the specific model, sets any needed output and returns it.
 	 * 
@@ -12,7 +14,7 @@ class AdminModel extends Model
 	public function execute() : array 
 	{
 		$returnData = [];
-
+		$secondarySubjects = [];
 		// Checking if the user is a admin, only relevant if the user manually changes the display of the button.
 		if (!$this->isUserAdmin()) 
 		{
@@ -22,11 +24,22 @@ class AdminModel extends Model
 		$this->handleGivenArguments();
 		
 		// Getting a array of only the primary subjects
-		$returnData["primarySubjects"] = $this->getPrimarySubjects();
+		$primarySubjects = $this->getPrimarySubjects();
+		$returnData["primarySubjects"] = $primarySubjects;
 
 		// Getting a array with all subjects
 		// Key = primarysubject Value = array of secondary subjects.
 		$returnData["subjects"] = $this->getSubjects();
+
+		// Checking if the secondary subjects array is empty
+		if (empty($secondarySubjects)) 
+		{
+			// If the secondarySubjects array is empty it means user loaded it for the first time.
+			// We will show the secondarySubjects of the first primary (the one automatically selected) 
+			$secondarySubjects = $this->getSecondarySubjects($primarySubjects[0]);
+		}
+		
+		$returnData["secondarySubjects"] = $secondarySubjects;
 
 		// Setting the locations for the locationsbar
 		$returnData["locations"] = 
@@ -56,14 +69,19 @@ class AdminModel extends Model
 			// Executing the right action depending on the action type
 			switch ($actionType) 
 			{
-				case "deletePrimary":
+				case "loadSecondaries":
 					$primary = $args[1];
+					$secondarySubjects = $this->getSecondarySubjects($primarySubject);
+					break;
+
+				case "deletePrimary":
+					$primary = htmlspecialchars($args[1] , ENT_QUOTES | ENT_HTML5, 'UTF-8');
 					$this->deletePrimary($primary);
 					break;
 		
 				case "deleteSecondary":
-					$primary = $args[1];
-					$secondary = $args[2];
+					$primary = htmlspecialchars($args[1] , ENT_QUOTES | ENT_HTML5, 'UTF-8');
+					$secondary = htmlspecialchars($args[2] , ENT_QUOTES | ENT_HTML5, 'UTF-8');
 					$this->deleteSecondary($primary, $secondary);
 					break;
 			}
@@ -71,13 +89,34 @@ class AdminModel extends Model
 	}
 
 	/** 
-	 * Deletes a primary subject (INCLUDING ALL ITS SECONDARY SUBJECTS AND POSTS UNDER THESE SECONDARY SUBJECTS!) 
+	 * Deletes a primary subject (INCLUDING ALL ITS SECONDARY SUBJECTS, POSTS AND SECONDARY SUBJECT PROPOSALS) 
 	 * 
 	 * @param string $primarySubject
 	 */
 	private function deletePrimary(string $primarySubject) 
 	{
+		$dbConn = openDBConnection();
 
+		try
+		{
+			// Deleting from subjects
+			$stmt = $dbConn->prepare("DELETE FROM subjects where primarysubject = ?");
+			$stmt->execute([$primarySubject]);
+
+			// Deleting from posts
+			$stmt = $dbConn->prepare("DELETE FROM posts where primarysubject = ?");
+			$stmt->execute([$primarySubject]);
+
+			// Deleting from secondary subject proposals
+			$stmt = $dbConn->prepare("DELETE FROM secondaryproposals where proposalPrimary = ?");
+			$stmt->execute([$primarySubject]);
+		}
+		catch (PDOException $e)
+		{
+			throw new DBException($e->getMessage());
+		}	
+
+		closeDBConnection($conn);
 	}
 
 	/** 
@@ -88,7 +127,26 @@ class AdminModel extends Model
 	 */
 	private function deleteSecondary(string $primarySubject, string $secondarySubject) 
 	{
+		logDebug("delete primary: " . var_export($primarySubject,true));
 
+		$dbConn = openDBConnection();
+
+		try
+		{
+			// Deleting from subjects
+			$stmt = $dbConn->prepare("DELETE FROM subjects where primarysubject = ? and secondarysubject = ?");
+			$stmt->execute([$primarySubject, $secondarySubject]);
+
+			// Deleting from posts
+			$stmt = $dbConn->prepare("DELETE FROM posts where primarysubject = ? and secondarysubject = ?");
+			$stmt->execute([$primarySubject, $secondarySubject]);
+		}
+		catch (PDOException $e)
+		{
+			throw new DBException($e->getMessage());
+		}	
+
+		closeDBConnection($conn);
 	}
 }
 ?>
